2005-05-17  Carl Worth  <cworth@cworth.org>

	* util/cairo-api-update: Remove #ifdef munging since we once again
	support either #if or #ifdef.

2005-05-17  Carl Worth  <cworth@cworth.org>

	* RELEASING: Update instructions to match output of 'make
	distcheck'
	
	* src/Makefile.am:
	* test/Makefile.am: Add private headers and flesh out CLEANFILES
	so that 'make distcheck' actually passes.

2005-05-17  Carl Worth  <cworth@cworth.org>

	* src/cairo.h: Add a few more REPLACED_BY and DEPRECATED_BY
	definitions.
	
	* util/cairo-api-update: Add some helpful warnings.

2005-05-17  Carl Worth  <cworth@cworth.org>

	* src/Makefile.am (libcairo_xlib_headers): Add
	cairo-xlib-xrender.h which was missed from an earlier commit.

2005-05-17  Carl Worth  <cworth@cworth.org>

	* src/Makefile.am:
	* src/cairo-xcb.h:
	* src/cairo-xcb-xrender.h:
	* src/cairo-xcb-surface.c:
	(cairo_xcb_surface_create),
	(cairo_xcb_surface_create_for_bitmap),
	(cairo_xcb_surface_create_with_xrender_format): Update cairo-xcb.h
	to provide the same style of interface as cairo-xlib.h.

	* test/cairo-test.c: Update to match new cairo_xcb_surface_t
	create functions.

2005-05-17  Carl Worth  <cworth@cworth.org>

	* src/cairo-xlib-surface.c (_get_image_surface): Avoid shifting
	32-bit quanity by 32 bits, which is undefined behavior.

2005-05-17  Carl Worth  <cworth@cworth.org>

	Rework of cairo_xlib_surface create functions by Keith Packard:

	* src/cairo-xlib-xrender.h:
	Add cairo_xlib_surface_create_with_render_format.
	
	* src/cairo-xlib.h:
	* src/cairo-xlib-surface.c:
	(cairo_xlib_surface_create),
	(cairo_xlib_surface_create_for_bitmap): Reduce Xlib constructors
	down to two simple forms. Add width, height to constructors and
	eliminate any synchronous size queries from the implementation.

	* test/cairo-test.c: (create_xlib_surface):
	* test/xlib-surface.c: (do_test): Update to match new
	cairo_xlib_surface_t create functions.

2005-05-17  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h: