@@ -1125,16 +1125,12 @@ cairo_xlib_surface_create (Display     *dpy,
 /**
  * cairo_xlib_surface_create_for_bitmap:
  * @dpy: an X Display
- * @bitmap: an X Drawable, (a depth-1 Pixmap)
+ * @bitmap: an X bitmap (a depth-1 Pixmap)
  * @width: the current width of @bitmap.
  * @height: the current height of @bitmap.
  * 
  * Creates an Xlib surface that draws to the given bitmap.
  * This will be drawn to as a CAIRO_FORMAT_A1 object.
- *
- * NOTE: If @drawable is a Window, then the function
- * cairo_xlib_surface_set_size must be called whenever the size of the
- * window changes.
  *
  * Return value: the newly created surface
  **/
